# 2019S1-COMP90024-Project-1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Project_1.cbp  README.md  Result.ipynb  build.py  build.sh  cmake_install.cmake  compress.sh  gen.py  gen.sh  main.cpp  main.py  mt-4-cpp.slurm  n1c1.out  n1c1.slurm  n1c16.slurm  n1c2.slurm  n1c32.slurm  n1c4.slurm  n1c64.slurm  n1c8.out  n1c8.slurm  n2c4.out  n2c4.slurm  n2c4.summary  n2c4s.err  n2c8.slurm  n4c4.slurm  run.py  st-cpp.slurm
.ipynb_checkpoints/: Result-checkpoint.ipynb
SLURM/: gen.py  n1c1.slurm  n1c1.summary  n1c16.slurm  n1c2.slurm  n1c32.slurm  n1c32.summary  n1c4.slurm  n1c8.slurm  n2c4.slurm  n8c1.summary
SLURM/n1c1/: 1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  2.out  20.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
SLURM/n1c16/: 1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  2.out  20.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
SLURM/n1c2/: 1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  2.out  20.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
SLURM/n1c32/: 1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  2.out  20.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
SLURM/n1c4/: 1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  2.out  20.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
SLURM/n1c8/: 1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  2.out  20.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
SLURM/n2c1/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n2c16/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n2c2/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n2c32/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n2c4/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n2c8/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n4c1/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n4c16/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n4c2/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n4c4/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n4c8/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n8c1/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  8.out  9.err  9.out
SLURM/n8c16/: 1.err  1.out  10.err  10.out  11.err  11.out  12.err  12.out  13.err  13.out  14.err  14.out  15.err  15.out  16.err  16.out  17.err  17.out  18.err  18.out  19.err  19.out  2.err  2.out  20.err  20.out  3.err  3.out  4.err  4.out  5.err  5.out  6.err  6.out  7.err  7.out  8.err  (+3 more)
main/: grid.cpp  main.cpp
python/: grid.py  main-mpi4py.py  main.py
src/: grid.hpp  grid_test.cpp  main.cpp  preprocess.hpp  preprocessor.hpp  process.hpp  processor.hpp  processor_test.cpp  processors.hpp  processors_test.cpp  project_test.cpp  read_grid.hpp  timer.hpp
test/: grid_test.cpp  processor_test.cpp
(+169 files in other folders)
